Bug 515665 - Show track number first by default
Summary: Show track number first by default
Status: RESOLVED FIXED
Alias: None
Product: AudioCD-KIO
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-07 00:40 UTC by Barade
Modified: 2026-02-08 19:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barade 2026-02-07 00:40:09 UTC
SUMMARY
It is a minor thing but by default in my config for audioCDs in system settings the track number appears after the track artist which makes no sense at all for sorting files etc.
I would prefer the default to be %{number} - %{trackartist} - %{title}
Ripping my old audio CDs this was rather annoying until I found out how to change it.

STEPS TO REPRODUCE
1. Put in an Audio CD
2. Open it in Dolphin
3. See

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: Ubuntu 25.10
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.2
Kernel Version: 6.17.0-12-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Yuri Chornoivan 2026-02-08 19:30:29 UTC
Git commit 788c62ada3fea3890f24dee616434f1f803485da by Yuri Chornoivan.
Committed on 08/02/2026 at 19:30.
Pushed by yurchor into branch 'master'.

Show track number first as default

M  +2    -2    kcmaudiocd/kcmaudiocd.cpp

https://invent.kde.org/multimedia/audiocd-kio/-/commit/788c62ada3fea3890f24dee616434f1f803485da