Show track number first as default

BUG:515665